# noite

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.tsx
src-tauri/: .env  .gitignore  Cargo.toml  store.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-04-21-173250_create_notes_table/: down.sql  up.sql
src-tauri/migrations/2023-05-03-095644_folder_notes/: down.sql  up.sql
src-tauri/src/: cmd.rs  main.rs  schema.rs
src-tauri/src/db/: mod.rs  models.rs
src/api/: folders.ts  notes.ts
src/components/control/: FolderOption.tsx  NoteOption.tsx  VueControl.tsx
src/components/tiptap/: MenuToolbar.tsx  SimpleEditor.tsx
src/components/ui/: AllNotes.tsx  AppWindow.tsx  ColorModeSwitcher.tsx  Folder.tsx  Note.tsx  NoteDrawer.tsx  SideNav.tsx  theme.ts
src/context/: store.tsx
src/pages/: Folder.tsx  Folders.tsx  Home.tsx  Notes.tsx  Settings.tsx
src/styles/: main.css
src/utils/: sort.ts
