[package]
name = "noite"
version = "0.1.0"
description = "A lightweight note app"
authors = ["maksam7dev@gmail.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.2", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
dotenv = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
